add storage class